vlib/v/parser/tests/nested_unsafe_stmt.vv
fn main() {
	a := 0
	unsafe {
		unsafe {
			a++
		}
	}
	println(a)
}
